<?xml version="1.0"?>
<package format="3">
  <name>sd_control</name>
  <version>2.2.0</version>
  <description>The sd_control package</description>

  <author email="sander@parkopedia.com">Sander van Dijk</author>

  <maintainer email="fionan@streetdrone.com">Fionán O'Sullivan</maintainer>

  <license>Apache 2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gazebo_ros</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>nav_msgs</depend>
  <depend>sd_msgs</depend>

  <export>
      <gazebo_ros gazebo_plugin_path="${prefix}/lib" gazebo_model_path="${prefix}/.."/>
      <build_type>ament_cmake</build_type>
  </export>
</package>
